tests/algorithms/transpiler/FS/web_programming/co2_emission.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/append_builtin.scala:5: warning: non-variable type argument Int in type pattern List[Int] (the underlying of List[Int]) is unchecked since it is eliminated by erasure
        case xs: List[Int] => println(xs.mkString(" ") )
                 ^
/workspace/mochi/tests/transpiler/x/scala/append_builtin.scala:11: error: not found: value append
        mochiPrint(append(a, 3))
                   ^
one warning found
one error found
